--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bitmex-realtime-api": "^0.4.3",
+    "bulma": "^0.8.0",
     "core-js": "^3.6.4",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
   },
